-
Bug
-
Resolution: Done
-
P1: Critical
-
5.10, 5.11.0 Beta 1, 5.12.0 Beta 1, 5.12.0 Beta 2
-
a4baa3c2e2a74e35a5e1dabb7c1cbbdfb6c48be9
When doing a top level configure of Qt, the config.tests of the Qt KNX module fail due to including core in the .pro file. This happens for instance when building the documentation as here http://10.212.3.36:8080/coin/api/results/qt/tqtc-qt5/1b45c9251c3458dd64ed45241a305d8b5351ad30/LinuxUbuntu_16_04x86_64LinuxUbuntu_16_04x86_64GCCqtci-linux-Ubuntu-16.04-x86_64-2-fdaf6eDeveloperBuild_OutOfSourceBuild_QtLibInfix_QtNamespace_BuildExamples_Documentation/2a48a3b7dcb9652b1532a3ad14de7580b5b9b1ee/build_1520885130/log.txt.gz
Qt Core does not exist at that point and hence qmake correctly throws an error.
- is required for
-
QTBUG-66891 Qt for Automation modules have no examples shown in Qt Creator
-
- Closed
-
-
QTBUG-66894 Automation Packages missing documentation for Qt KNX and Qt OpcUA
-
- Closed
-