Linux qmake compiler detection for qtknx not working

Running configuration tests...
Checking for Minimum compiler version... no
Done running configuration tests.

Configure summary:

Qt KNX:
  Minimum compiler version detected ...... no

Task-number: QTBUG-67157
Change-Id: I3a12e8aea25a162c01f033880ca87c0c41c9a6e8
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Karsten Heimrich <karsten.heimrich@qt.io>